<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <ImageView
        android:id="@+id/imv_background_top"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_blob_bg" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_group_4"
        android:layout_marginLeft="@dimen/dp16" />

    <ImageView
        android:id="@+id/imv_icon_hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp80"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imv_background_top"
        android:src="@drawable/ic_hi_blob" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:text="@string/hello"
        style="@style/TextStyle17"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imv_icon_hi" />

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp70"
        style="@style/TextStyle19"
        android:text="@string/phone_number"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <EditText
        android:id="@+id/edt_phone"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white_two"
        android:ems="10"
        style="@style/TextStyle18"
        android:hint="@string/input_phone"
        android:inputType="textEmailAddress"
        android:paddingBottom="@dimen/dp15"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

    <TextView
        android:id="@+id/tv_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp35"
        style="@style/TextStyle19"
        android:text="@string/pass"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/edt_phone" />

    <EditText
        android:id="@+id/edt_pass"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white_two"
        android:ems="10"
        style="@style/TextStyle18"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:paddingBottom="@dimen/dp15"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/tv_pass" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp45"
        android:background="@drawable/background_btn"
        android:text="@string/sign_in"
        android:gravity="center_vertical|center"
        style="@style/TextStyle21"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/edt_pass" />

    <TextView
        android:id="@+id/tv_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:gravity="end"
        style="@style/TextStyle20"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@+id/edt_phone" />

    <TextView
        android:id="@+id/tv_new_friendly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="27dp"
        style="@style/TextStyle22"
        android:text="@string/new_to_friendly_design"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in"
        android:layout_marginLeft="100dp" />

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp8"
        style="@style/TextStyle23"
        android:text="@string/sign_up"
        android:textColor="@color/accent_two"
        app:layout_constraintBottom_toBottomOf="@+id/tv_new_friendly"
        app:layout_constraintStart_toEndOf="@+id/tv_new_friendly"
        app:layout_constraintTop_toTopOf="@+id/tv_new_friendly"
        android:layout_marginLeft="8dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06"/>
</androidx.constraintlayout.widget.ConstraintLayout>