<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/logo"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/logo_app_eat"
            android:layout_width="150dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:gravity="center"
            android:textSize="24sp"
            android:text="@string/tv_slogan"
            android:id="@+id/tv_slogan"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/logo"
        android:orientation="horizontal"
        android:weightSum="2"
        android:gravity="bottom"
        android:layout_margin="@dimen/dp10"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btn_sign_in"
            android:text="@string/sign_in"
            android:layout_marginRight="@dimen/dp5"
            android:background="@drawable/background_btn"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_sign_up"
            android:text="@string/sign_up"
            android:layout_marginLeft="@dimen/dp5"
            android:background="@drawable/background_btn"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>